<resources>
    <string name="app_name">HelpTicket</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="tickets">Tickets</string>
    <string name="newTicket">New</string>
    <string name="title_activity_read_ticket">ReadTicketActivity</string>
    <string name="solved_tickets">Solved Tickets</string>
    <string name="unsolved_tickets">Unsolved Tickets</string>
    <string name="title_activity_unsolved_ticket">UnsolvedTicketActivity</string>
    <string name="title_activity_all_ticket">AllTicketActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_create_ticket">CreateTicketActivity</string>
    <string name="Login">Login</string>
    <string name="Welcome">Welcome,</string>
    <string name="sign_out">Sign Out</string>
    <string name="getting_graph_data">Getting Graph Data...</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="location">Location:</string>

    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="tech">Tech:</string>

    <string name="employee">Employee:</string>
    <string name="create">Create</string>
    <string name="ticket_description">Ticket Description</string>
    <string name="equipment">Equipment:</string>
    <string name="state">State</string>
    <string name="reports">Reports</string>
    <string name="button">Button</string>
    <string name="title_activity_report_post">ReportActivityPOST</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="Forgot_Pass">Did you forgot your passoword?</string>
    <string name="by_ticket_number">by Ticket number</string>
    <string name="by_equipment">by Equipment</string>
    <string name="by_employee_s_name">by Employee\'s name</string>
    <string name="by_requested_date">by Requested Date</string>
    <string name="by_state">by State</string>
</resources>
