<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewTech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tickets" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showNewTicket"
        android:text="@string/newTicket" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showUpdate"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDelete"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showSearch"
        android:text="@string/search" />

</LinearLayout>